# TWM

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pre-install.sh  pyproject.toml
models/gesture_detection/: pipeline.config
models/gesture_detection/checkpoint/: checkpoint  ckpt-0.index
models/gesture_detection/saved_model/: fingerprint.pb
models/gesture_detection/saved_model/variables/: variables.index
scripts/: capture_images.py
tensorflow/scripts/: generate_tfrecord.py
tensorflow/workspace/: pipeline.config
tensorflow/workspace/annotations/: label_map.pbtxt
twm/: __main__.py  camera.py  constants.py  control.py  gaze.py  gesture.py  gui.py  types.py  utils.py  video.py
