[tool.poetry]
name = "twm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dlib = "^19.24.2"
expression = "^4.2.4"
opencv-python = "^4.7.0.72"
pyautogui = "^0.9.54"
tensorflow = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
