[tool.poetry]
name = "twm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gaze-tracking = {path = "deps/gaze_tracking-0.1.0-py3-none-any.whl"}
opencv-python = "^4.7.0.72"
pyautogui = "^0.9.54"
pandas = "^2"
protobuf = ">=3.9.2"
matplotlib-inline = "^0.1.6"
python-dotenv = "^1.0.0"
ipykernel = "^6.23.2"
tensorflow = "2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
labelimg = "^1.8.6"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
